tests/error/13_trait_not_implemented.mire
import std

pub skill Printer {
    print: (self) -> ()
}

pub fn main: () {
    set x = 10
    x.print()
}